src/css/index.css
@import "./animations.css";
@import "./base.css";

@tailwind base;
@tailwind components;
@tailwind utilities;

@layer utilities {
  .hover\:float {
    @apply transform transition hover:-translate-y-1;
  }

  .hover\:scale {
    @apply transform transition hover:scale-95;
  }

  .z-60 {
    z-index: 60;
  }

  @responsive {
    .flex-5\/6 {
      flex: 0 0 75%;
      max-width: 75%;
    }

    .flex-4\/6 {
      flex: 0 0 66.6666%;
      max-width: 66.6666%;
    }

    .flex-3\/6 {
      flex: 0 0 50%;
      max-width: 50%;
    }

    .flex-2\/6 {
      flex: 0 0 33.3333%;
      max-width: 33.3333%;
    }

    .left-unset {
      left: unset;
    }
  }
}

